# mixdiscs

./: .coverage  .gitignore  AGENTS.md  README.md  TESTING.md  app.py  config.yaml  pyproject.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: manual-validate-render.yml  render-playlists.yml  test.yml  validate-playlists.yml
.playlist_cache/: playlists_cache.json  tracks_cache.json
docs/: REMOTE_PLAYLISTS.md
docs/wiki/: FAQ.md  Fixing-Frozen-Playlists.md  Home.md  Troubleshooting-Common-Errors.md  Validation-Rules-Reference.md
examples/: manual-playlist-template.yaml  remote-playlist-template.yaml
mixdiscer/: cache.py  configuration.py  create_playlist.py  main.py  playlists.py  track_cache.py  validation.py
mixdiscer/cli/: __init__.py  generators.py  genre_utils.py  prompts.py  validators.py
mixdiscer/music_service/: __init__.py  music_service.py  spotify.py
mixdiscer/output/: render.py
mixdiscs/: MixMasterTest - Testy McTest List.yaml
mixdiscs/ElectroCurator/: ElectroCurator - Late Night Circuits.yaml
mixdiscs/MixMasterTest/: Classical-McClassicFace.yaml  Testy McTest List.yaml
scripts/: get_changed_playlists.sh  validate_changed.sh
templates/: frozen-playlists.html.j2  genres.html.j2  index.html.j2  script.js  style.css  users.html.j2
tests/: __init__.py  conftest.py
tests/cli/: test_generators.py  test_genre_utils.py  test_validators.py
tests/fixtures/playlists/: album_filter.yaml  invalid_format.yaml  missing_tracks.yaml  over_duration.yaml  valid_playlist.yaml
tests/integration/: __init__.py  test_remote_playlist_workflow.py  test_validate_workflow.py
tests/unit/: __init__.py  test_cache.py  test_cache_remote.py  test_check_remote_update.py  test_configuration.py  test_main.py  test_playlists.py  test_playlists_remote.py  test_render_remote.py  test_spotify_remote.py  test_track_cache.py  test_validation.py
tests/unit/music_service/: __init__.py  test_music_service.py
