[project]
name = "mixdiscs"
version = "0.1.0"
description = "Playlists but nerdier!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.2",
    "spotipy>=2.25.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipdb>=0.13.13",
    "ipython>=8.32.0",
    "mypy>=1.15.0",
    "pylint>=3.3.4",
    "types-pyyaml>=6.0.12.20241230",
]
pyyaml-build = ["cython<3", "setuptools"]

[tool.uv]
no-build-isolation-package = ["pyyaml"]

